# mri-acronyms

./: .gitattributes  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
data/: mri_vendor_acronyms.csv
scripts/: setup_project.sh  update_project.sh
src/mri_acronyms/: __init__.py  build_lookup_table.py  create_report.py  search_by_keyword.py
src/mri_acronyms/lut/: category_to_acronym_lut.py
src/mri_acronyms/models/: __init__.py  pulse_sequence_category.py  pydantic_models.py  validate_models.py
src/mri_acronyms/pulse_sequences/: __init__.py  angiography.py  cardiac.py  echo_planar.py  functional.py  gradient_echo.py  inversion_recovery.py  scanner_parameters.py  spectroscopy.py  spin_echo.py
src/mri_acronyms/util/: __init__.py  constants.py  logger.py
tests/: test_build_lookup_tables.py  test_create_report.py  test_keyword_search.py
