[tool.poetry]
authors = ["Emile Averill <cloud.apps@averille.dev>"]
description = "DEMO: Magnetic Resonance Imaging (MRI) vendor acronyms"
keywords = ["MRI", "acronyms", "imaging", "medical"]
license = "MIT"
name = "mri-acronyms"
package-mode = false
packages = [
  {from = "src", include = "mri_acronyms"},
]
readme = "README.md"
version = "0.2.1"

[tool.poetry.scripts]
build_lookup_table = "src.mri_acronyms.build_lookup_table:main"

[tool.poetry.dependencies]
english-words = "*"
pandas = "*"
pendulum = "*"
polars = "*"
pydantic = "*"
python = "^3.12"
rapidfuzz = "*"

[tool.poetry.group.dev.dependencies]
black = "*"
flake8 = "*"
isort = "*"
mypy = "*"
pre-commit = "*"
pydocstyle = "*"
pylint = "*"
pytest = "*"
ruff = "*"
toml-sort = "*"

[tool.ruff]
exclude = [
  ".git",
  ".idea",
  ".ruff_cache",
  ".uv_cache",
  ".venv",
]
line-length = 120
src = ["src", "test"]
target-version = "py312"

[tool.ruff.lint]
ignore = ["E203", "PLR0911", "PLR2004"]
select = [
  "E", # pycodestyle (error)
  "F", # pyflakes
  "I", # isort imports
  "PL", # pylint
  "W", # pycodestyle (warning)
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.isort]
known-third-party = ["src"]

[tool.ruff.format]
exclude = ["*.pyi"]
line-ending = "lf"

[tool.tomlsort]
all = true
in_place = true
no_sort_tables = true
sort_inline_arrays = true
sort_inline_tables = true
spaces_indent_inline_array = 2
trailing_comma_inline_array = true

[tool.mypy]
check_untyped_defs = true
disable_error_code = [
  "import",
]
pretty = true
python_version = "3.12"
show_error_codes = true

[installer]
no-binary = true

[virtualenvs]
in-project = true
prefer-active-python = true

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]
